# DIA-Core

./: .coverage  .env.example  .gitignore  LICENSE.txt  README.md  RUNBOOK.md  config.json  pyproject.toml  radon_cc.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Config/: config.exemple.json
scripts/: install_system.sh  run_bot.sh  verify_install.sh
src/: mypy.ini
src/dia_core/: __init__.py
src/dia_core/alerts/: daily_reporter.py  email_alerts.py  email_sender.py  formatters.py  notify.py  telegram_alerts.py  trade_notifier.py
src/dia_core/backtest/: backtest_engine.py  engine.py  metrics.py  models.py
src/dia_core/bot/: bot_engine.py  shared.py
src/dia_core/cli/: calibrate.py  helpers.py  main.py  run_impl.py
src/dia_core/config/: loader.py  models.py  requirements.txt  risk_config_loader.py  risk_limits.yaml
src/dia_core/controller/: execution.py  mode_loader.py
src/dia_core/data/: __init__.py  cache.py  provider.py  rollout_buffer.py
src/dia_core/exec/: executor.py  pre_trade.py
src/dia_core/executors/: kraken_executor.py  mock_executor.py
src/dia_core/kraken/: client.py  errors.py  types.py
src/dia_core/logging/: __init__.py  setup.py
src/dia_core/market_state/: fake.py  regime_vector.py
src/dia_core/models/: intent.py
src/dia_core/monitor/: health_monitor.py  ui_app.py
src/dia_core/orchestrator/: market_scanner.py  orchestrator.py  overload_guard.py  resource_manager.py  scheduler.py
src/dia_core/portfolio/: journal.py  state.py
src/dia_core/providers/: kraken_provider.py  mock_provider.py
src/dia_core/risk/: dynamic_fake.py  dynamic_manager.py  errors.py  limits.py  risk_manager.py  sizing.py  validator.py
src/dia_core/scripts/: runner_backtest.py  runner_report.py  train_model.py
src/dia_core/strategy/: adaptive_trade.py  common.py  decision_policy.py  heuristic_policy.py  metamorphic_policy.py  model_based_policy.py  utils.py
src/dia_core/strategy/policy/: bandit.py
src/dia_core/templates/: report_template.html
src/dia_core/tracking/: trade_logger.py  trade_tracker.py
state/: journal.sqlite
tests/: test_adaptive_trade.py  test_backtest_engine.py  test_cache_provider.py  test_cli_basic.py  test_journal_sqlite.py  test_kraken_client.py  test_logging_basic.py  test_monitor_smoke.py  test_regime_vector.py  test_risk_dynamic.py  test_risk_manager.py  test_run.py  test_sanity.py  test_scheduler.py  test_telegram_alerts.py
tools/: auto_fix_quality.ps1
