[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dia-core"
version = "1.0.0a1"
description = "DIA-Core bot: local-first, secure, scalable trading system"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Fabien Grolier"}]
dependencies = [
  "pydantic>=2.7,<3",
  "httpx>=0.27,<0.28",
  "tenacity>=8.2,<9",
  "python-dotenv>=1.0,<2",
  "pandas>=2.2,<3",
  "pyarrow>=16,<17",
]

[project.scripts]
dia-core = "dia_core.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
pythonpath = ["src"]
