[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false
preview = true

[tool.ruff]
line-length = 100
target-version = "py311"

# On appelle ruff uniquement sur src/ et tests/ dans la CI et localement,
# donc pas besoin d'exclusions complexes ici. (Pas de blocage sur legacy.)

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = false
show_error_codes = true
pretty = true
# On contraint l'analyse aux chemins passés en CLI (src/ et tests/).
# Évite de scanner du legacy hors périmètre.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
