[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false
preview = true

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E","F","W","C90","I","N","UP","B","A","S","BLE","DTZ","PIE","PL","PT","RUF","SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101","D"]         # assert autorisé, docstrings non obligatoires en tests
"src/**/__init__.py" = ["F401"]   # ré-exports autorisés

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --strict-markers --maxfail=1 --durations=10 --disable-warnings"
pythonpath = ["src"]
